sorting default values + update SK

--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -47,8 +47,8 @@
     <string name="dlg_set_as_home">Nastaviť ako \"Domáce mesto\"</string>
     <string name="donate">Príspevok</string>
     <string name="donations_button_close">Zatvoriť</string>
-    <string name="donations_flattr">Flattr</string>
     <string name="donations_description">"Je pre Vás táto aplikácia užitočná? Podporte nás malým príspevkom!"</string>
+    <string name="donations_flattr">Flattr</string>
     <string name="donations_flattr_description">Flattr vezme 10 % ako mesačný poplatok!</string>
     <string name="donations_google_android_market">Obchod Google Play</string>
     <string name="donations_google_android_market_description">Google si vezme 30 % z každého príspevku!</string>
@@ -64,6 +64,53 @@
     <string name="download_video">Stiahnuť video</string>
     <string name="end_time_title">Koniec</string>
     <string name="fetching_location">Získavanie Vašej polohy...</string>
+    <string name="foreca_clear">Jasno</string>
+    <string name="foreca_cloudy">Oblačno</string>
+    <string name="foreca_cloudy_l_rain">Jemny dážď</string>
+    <string name="foreca_cloudy_l_snow">Jemný sneh</string>
+    <string name="foreca_cloudy_l_wet_snow">Jemný mokrý sneh</string>
+    <string name="foreca_cloudy_rain">Dážď</string>
+    <string name="foreca_cloudy_showers">Prehánky</string>
+    <string name="foreca_cloudy_snow">Sneh</string>
+    <string name="foreca_cloudy_snow_showers">Snehové prehánky</string>
+    <string name="foreca_cloudy_ts_rain">Búrka s dažďom</string>
+    <string name="foreca_cloudy_ts_snow">Búrka so snehom</string>
+    <string name="foreca_cloudy_ts_wet_snow">Búrka s mokrým snehom</string>
+    <string name="foreca_cloudy_wet_snow">Mokrý sneh</string>
+    <string name="foreca_cloudy_wet_snow_showers">Prehánky s mokrým snehom</string>
+    <string name="foreca_mostly_clear">Polojasno</string>
+    <string name="foreca_mostly_clear_pos_rain">Možnosť dažďa</string>
+    <string name="foreca_mostly_clear_pos_snow">Možnosť snehu</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Možnosť búrky s dažďom</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Možnosť búrky so snehom</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Možnosť búrky s mokrým snehom</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Možnosť mokrého snehu</string>
+    <string name="foreca_overcast">Predpoveď</string>
+    <string name="foreca_overcast_l_rain">Jemný dážď</string>
+    <string name="foreca_overcast_l_snow">Jemný sneh</string>
+    <string name="foreca_overcast_l_wet_snow">Jemný mokrý sneh</string>
+    <string name="foreca_overcast_rain">Dážď</string>
+    <string name="foreca_overcast_showers">Prehánky</string>
+    <string name="foreca_overcast_snow">Sneh</string>
+    <string name="foreca_overcast_snow_showers">Snehové prehánky</string>
+    <string name="foreca_overcast_ts_rain">Búrka s dažďom</string>
+    <string name="foreca_overcast_ts_snow">Búrka so snehom</string>
+    <string name="foreca_overcast_ts_wet_snow">Búrka s mokrým snehom</string>
+    <string name="foreca_overcast_wet_snow">Mokrý sneh</string>
+    <string name="foreca_overcast_wet_snow_showers">Prehánky s mokrým snehom</string>
+    <string name="foreca_partly_cloudy">Polojasno</string>
+    <string name="foreca_partly_cloudy_l_rain">Jemny dážď</string>
+    <string name="foreca_partly_cloudy_l_snow">Jemný sneh</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Jemný mokrý sneh</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Možnosť búrky s dažďom</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Možnosť búrky so snehom</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Možnosť búrky s mokrým snehom</string>
+    <string name="foreca_partly_cloudy_rain">Dážď</string>
+    <string name="foreca_partly_cloudy_showers">Prehánky</string>
+    <string name="foreca_partly_cloudy_snow">Sneh</string>
+    <string name="foreca_partly_cloudy_snow_showers">Snehové prehánky</string>
+    <string name="foreca_partly_cloudy_wet_snow">Mokrý sneh</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Prehánky s mokrým snehom</string>
     <string name="changelog">Zoznam zmien</string>
     <string name="just_now">Práve teraz</string>
     <string name="loading">Načítavanie...</string>
