Updated cs lang

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -7,7 +7,7 @@
     <string name="about_dust">Prach</string>
     <string name="about_fog">Mlha</string>
     <string name="about_for_translators">Pro překladatele:</string>
-    <string name="about_for_translators_text">Pokud chcete pomoci s překladem této aplikace do Vašeho jazyka, najdete naše github repo po stisknutí ikony Githubu.</string>              
+    <string name="about_for_translators_text">Pokud chcete pomoci s překladem této aplikace do Vašeho jazyka, náš github repo najdete po stisknutí ikony Githubu.</string>              
     <string name="about_hailstone">Kroupy</string>
     <string name="about_heavy_snow">Těžký sníh</string> 
     <string name="about_light_rain">Mrholení</string>
@@ -40,14 +40,15 @@
     <string name="conf_light_skin">Světlý vzhled</string>
     <string name="conf_name">Nastavení Widgetu</string>
     <string name="conf_no_background">Bez pozadí</string>
+    <string name="date_format_title">Formát data</string>
     <string name="dialog_color_picker">Výběr barvy</string>
     <string name="dlg_go_to_forecast">Jít na předpověď</string>
     <string name="dlg_select_action">Zvolte akci</string>
     <string name="dlg_set_as_home">Nastavit jako \"Domácí město\"</string>
     <string name="donate">Příspěvek</string>
     <string name="donations_button_close">Zavřít</string>
-    <string name="donations_flattr">Flattr</string>
     <string name="donations_description">"Je pro Vás tato aplikace užitečná? Podpořte nás malým příspěvkem!"</string>
+    <string name="donations_flattr">Flattr</string>
     <string name="donations_flattr_description">Flattr vezme 10 % jako měsíční poplatek!</string>
     <string name="donations_google_android_market">Obchod Google Play</string>
     <string name="donations_google_android_market_description">Google si vezme 30 % z každého příspěvku!</string>
@@ -63,8 +64,56 @@
     <string name="download_video">Stáhnout video</string>
     <string name="end_time_title">Konec</string>
     <string name="fetching_location">Získávání Vaší polohy...</string>
+    <string name="foreca_clear">Jasno</string>
+    <string name="foreca_cloudy">Oblačno</string>
+    <string name="foreca_cloudy_l_rain">Jemný déšť</string>
+    <string name="foreca_cloudy_l_snow">Jemný sníh</string>
+    <string name="foreca_cloudy_l_wet_snow">Jemný mokrý sníh</string>
+    <string name="foreca_cloudy_rain">Déšť</string>
+    <string name="foreca_cloudy_showers">Přeháňky</string>
+    <string name="foreca_cloudy_snow">Sníh</string>
+    <string name="foreca_cloudy_snow_showers">Sněhové přeháňky</string>
+    <string name="foreca_cloudy_ts_rain">Bouřka s deštěm</string>
+    <string name="foreca_cloudy_ts_snow">Bouřka se sněhem</string>
+    <string name="foreca_cloudy_ts_wet_snow">Bouřka s mokrým sněhem</string>
+    <string name="foreca_cloudy_wet_snow">Mokrý sníh</string>
+    <string name="foreca_cloudy_wet_snow_showers">Přeháňky s mokrým sněhem</string>
+    <string name="foreca_mostly_clear">Polojasno</string>
+    <string name="foreca_mostly_clear_pos_rain">Možnost deště</string>
+    <string name="foreca_mostly_clear_pos_snow">Možnost sněhu</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Možnost bouřky s deštěm</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Možnost bouřky se sněhem</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Možnost bouřky s mokrým sněhem</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Možnost mokrého sněhu</string>
+    <string name="foreca_overcast">Předpověď</string>
+    <string name="foreca_overcast_l_rain">Jemný déšť</string>
+    <string name="foreca_overcast_l_snow">Jemný sníh</string>
+    <string name="foreca_overcast_l_wet_snow">Jemný mokrý sníh</string>
+    <string name="foreca_overcast_rain">Déšť</string>
+    <string name="foreca_overcast_showers">Přeháňky</string>
+    <string name="foreca_overcast_snow">Sníh</string>
+    <string name="foreca_overcast_snow_showers">Sněhové přeháňky</string>
+    <string name="foreca_overcast_ts_rain">Bouřka s deštěm</string>
+    <string name="foreca_overcast_ts_snow">Bouřka se sněhem</string>
+    <string name="foreca_overcast_ts_wet_snow">Bouřka s mokrým sněhem</string>
+    <string name="foreca_overcast_wet_snow">Mokrý sníh</string>
+    <string name="foreca_overcast_wet_snow_showers">Přeháňky s mokrým sněhem</string>
+    <string name="foreca_partly_cloudy">Polojasno</string>
+    <string name="foreca_partly_cloudy_l_rain">Jemný déšť</string>
+    <string name="foreca_partly_cloudy_l_snow">Jemný sníh</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Jemný mokrý sníh</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Možnost bouřky s deštěm</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Možnost bouřky se sněhem</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Možnost bouřky s mokrým sněhem</string>
+    <string name="foreca_partly_cloudy_rain">Déšť</string>
+    <string name="foreca_partly_cloudy_showers">Přeháňky</string>
+    <string name="foreca_partly_cloudy_snow">sníh</string>
+    <string name="foreca_partly_cloudy_snow_showers">Sněhové přeháňky</string>
+    <string name="foreca_partly_cloudy_wet_snow">Mokrý sníh</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Přeháňky s mokrým sněhem</string>
     <string name="changelog">Seznam změn</string>
     <string name="just_now">Právě teď</string>
+    <string name="loading">Načítání...</string>
     <string name="location_edit">Vložte název Města</string>
     <string name="location_gps">Současná poloha</string>    
     <string name="location_list">Města</string>
@@ -76,7 +125,10 @@
     <string name="menu_trend">Vývoj</string>	
     <string name="menu_update">Aktualizovat</string>
     <string name="network_error">Není možné se připojit na server</string>
-    <string name="no_provider">"Určení polohy selhalo. Zvolte svoje město manuálně"</string>
+    <string name="new_version">Nová verze</string> 
+    <string name="no_provider">"Určení polohy selhalo. Zvolte město manuálně"</string>
+    <string name="no_weather_provider">Žádný zdroj předpovědi</string> 
+    <string name="not_now">Později</string> 
     <string name="ok">OK</string>
     <string name="press_color_to_apply">Zvolte barvu</string>
     <string name="pressure_units">Jednotka tlaku</string>
@@ -113,9 +165,9 @@
     <string name="settings_check_updates_title">Kontrola aktualizací</string>
     <string name="settings_miui_support_summary">Povolte pro podporu widgetu počasí MIUI</string>
     <string name="settings_miui_support_title">MIUI widget</string>
-    <string name="settings_miui_v5_summary">Povolte pokud používate MIUI v5</string>
+    <string name="settings_miui_v5_summary">Povolte pokud používáte MIUI v5</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
-    <string name="settings_notification_color_title">Barva symbolu v oznamovací lište</string>
+    <string name="settings_notification_color_title">Barva symbolu v oznamovací liště</string>
     <string name="settings_notification_summary">Zobrazit aktuální Počasí v notifikační liště</string>
     <string name="settings_notification_text_color_summary">Barva textu a ikony upozornění</string>
     <string name="settings_notification_title">Zobrazit upozornění</string>
@@ -133,6 +185,7 @@
     <string name="settings_update_wake_title">Probudit telefon</string>
     <string name="settings_update_wifi_only_summary">Aktualizovat předpověď počasí jen při připojení na Wi-Fi</string>
     <string name="settings_update_wifi_only_title">Aktualizovat jen na Wi-Fi</string>
+    <string name="settings_weather_provider">Zdroj předpovědi</string>
     <string name="settings_widgets_click_clock_summary">Aplikace se spustí při dotyku na widget s hodinami</string>
     <string name="settings_widgets_click_clock_title">Dotyk na Hodiny</string>
     <string name="settings_widgets_click_date_summary">Aplikace se spustí při dotyku na datum widgetu</string>
@@ -166,6 +219,7 @@
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Barva textu</string>
     <string name="updating">Aktualizace...</string>
+    <string name="upgrade">Aktualizovat</string>
     <string name="visibility_units">Jednotka viditelnosti</string>
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
