--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="new_version">Neue Version</string> 
-	<string name="upgrade">Upgrade</string> 
-	<string name="not_now">Nicht jetzt</string> 
-	<string name="loading">Lade\u2026</string> 
     <string name="about_author">Author:</string>
     <string name="about_blizzard">Schneesturm</string>
     <string name="about_cloudy">Wolkig</string>
@@ -32,6 +28,7 @@
     <string name="btn_add_location">Ort hinzufügen</string>
     <string name="btn_delete_location">Ort löschen</string>
     <string name="cancel">Abbrechen</string>
+    <string name="changelog">Changelog</string>
     <string name="clear_miui_data">Bereinige MIUI-Wetterdaten</string>
     <string name="clear_miui_data_dialog">Bereinige MIUI-Wetter</string>
     <string name="clear_miui_data_dialog_ask">MIUI-Wetterprovider-Datenbank bereinigen?</string>
@@ -39,8 +36,8 @@
     <string name="clear_miui_data_summary">Bereinigt MIUI-Wetter-Provider-Datenbank</string>
     <string name="close">Schließen</string>
     <string name="conf_add_widget">Widget hinzufügen</string>
-    <string name="conf_dark_skin">Dunkel</string>
     <string name="conf_choose_skin">Darstellung wählen</string>
+    <string name="conf_dark_skin">Dunkel</string>
     <string name="conf_light_skin">Hell</string>
     <string name="conf_name">Widget Einstellungen</string>
     <string name="conf_no_background">Kein Hintergrund</string>
@@ -61,16 +58,63 @@
     <string name="donations_google_android_market_not_supported_title">In-App-Spenden werden nicht unterstützt</string> 
     <string name="donations_google_android_market_text">Wie viel?</string> 
     <string name="donations_paypal">PayPal</string> 
-    <string name="donations_yandex">Yandex.Money (RU)</string>  
     <string name="donations_paypal_description">Du kannst entscheiden wieviel Du spenden willst, nachdem Du den Button gedrückt hast!</string> 
     <string name="donations_paypal_item_name">In-App-Spende</string> 
     <string name="donations_thanks_dialog">Danke für die Spende!\nIch weiß das sehr zu schätzen!</string>    
     <string name="donations_thanks_dialog_title">Danke!</string> 
+    <string name="donations_yandex">Yandex.Money (RU)</string>  
     <string name="download_video">Video abrufen</string>
     <string name="end_time_title">Ende</string>
     <string name="fetching_location">Ermittle Deine Position\u2026</string>
-    <string name="changelog">Changelog</string>
+    <string name="foreca_clear">Klar</string>
+    <string name="foreca_cloudy">Wolkig</string>
+    <string name="foreca_cloudy_l_rain">Nieseln</string>
+    <string name="foreca_cloudy_l_snow">Leichter Schneefall</string>
+    <string name="foreca_cloudy_l_wet_snow">Leichter, nasser Schneefall</string>
+    <string name="foreca_cloudy_rain">Regen</string>
+    <string name="foreca_cloudy_showers">Schauer</string>
+    <string name="foreca_cloudy_snow">Schnee</string>
+    <string name="foreca_cloudy_snow_showers">Schneegestöber</string>
+    <string name="foreca_cloudy_ts_rain">Gewitter mit Regen</string>
+    <string name="foreca_cloudy_ts_snow">Gewitter mit Schnee</string>
+    <string name="foreca_cloudy_ts_wet_snow">Gewitter mit nassem Schnee</string>
+    <string name="foreca_cloudy_wet_snow">Nasser Schnee</string>
+    <string name="foreca_cloudy_wet_snow_showers">Nasse Schneeschauer</string>
+    <string name="foreca_mostly_clear">Meist Klar</string>
+    <string name="foreca_mostly_clear_pos_rain">Regen möglich</string>
+    <string name="foreca_mostly_clear_pos_snow">Schnee möglich</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Gewitter mit Regen möglich</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Gewitter mit Schnee möglich</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Gewitter mit nassem Schnee möglich</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Nasser Schnee möglich</string>
+    <string name="foreca_overcast">Bedeckt</string>
+    <string name="foreca_overcast_l_rain">Nieseln</string>
+    <string name="foreca_overcast_l_snow">Leichter Schneefall</string>
+    <string name="foreca_overcast_l_wet_snow">Leichter, nasser Schneefall</string>
+    <string name="foreca_overcast_rain">Regen</string>
+    <string name="foreca_overcast_showers">Schauer</string>
+    <string name="foreca_overcast_snow">Schnee</string>
+    <string name="foreca_overcast_snow_showers">Schneegestöber</string>
+    <string name="foreca_overcast_ts_rain">Gewitter mit Regen</string>
+    <string name="foreca_overcast_ts_snow">Gewitter mit Schnee</string>
+    <string name="foreca_overcast_ts_wet_snow">Gewitter mit nassem Schnee</string>
+    <string name="foreca_overcast_wet_snow">Nasser Schnee</string>
+    <string name="foreca_overcast_wet_snow_showers">Nasse Schneeschauer</string>
+    <string name="foreca_partly_cloudy">Teilweise wolkig</string>
+    <string name="foreca_partly_cloudy_l_rain">Nieseln</string>
+    <string name="foreca_partly_cloudy_l_snow">Leichter Schneefall</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Leichter, nasser Schneefall</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Gewitter mit Regen möglich</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Gewitter mit Schnee möglich</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Gewitter mit nassem Schnee möglich</string>
+    <string name="foreca_partly_cloudy_rain">Regen</string>
+    <string name="foreca_partly_cloudy_showers">Schauer</string>
+    <string name="foreca_partly_cloudy_snow">Schnee</string>
+    <string name="foreca_partly_cloudy_snow_showers">Schneegestöber</string>
+    <string name="foreca_partly_cloudy_wet_snow">Nasser Schnee</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Nasse Schneeschauer</string>
     <string name="just_now">Gerade eben</string>
+    <string name="loading">Lade\u2026</string> 
     <string name="location_edit">Name der Stadt</string>
     <string name="location_gps">Aktueller Ort</string>
     <string name="location_list">Orte</string>
@@ -82,8 +126,10 @@
     <string name="menu_trend">Trend</string>
     <string name="menu_update">Aktualisierung</string>
     <string name="network_error">Verbindung mit dem Server fehlgeschlagen</string>
+    <string name="new_version">Neue Version</string> 
     <string name="no_provider">Positionierung nicht möglich\nWähle den Ort selbst aus</string>
     <string name="no_weather_provider">Kein MIUI-Wetteranbieter gefunden</string>    <string name="ok">OK</string>
+    <string name="not_now">Nicht jetzt</string> 
     <string name="press_color_to_apply">Zum Anwenden die Farbe berühren</string> 
     <string name="pressure_units">Druckeinheit</string> 
     <string name="pressure_units_mb">" hPa"</string>
@@ -114,9 +160,9 @@
     <string name="settings_category_update_sum">Einstellungen für automatisches Aktualisieren und Intervalle</string>
     <string name="settings_category_widgets">Widget-Einstellungen</string>
     <string name="settings_category_widgets_sum">Widget-Darstellung und Widget-Aktionen</string>
-    <string name="settings_click_actions">Berührungseinstellungen</string>
     <string name="settings_check_updates_summary">Prüfe auf Aktualisierung beim Anwendungsstart</string>    
     <string name="settings_check_updates_title">Prüfe auf Aktualisierung</string>
+    <string name="settings_click_actions">Berührungseinstellungen</string>
     <string name="settings_miui_support_summary">Einschalten um native MIUI-Widgets zu unterstützen</string>
     <string name="settings_miui_support_title">MIUI-Widget-Unterstützung</string>
     <string name="settings_miui_v5_summary">Einschalten wenn Du ein MIUI v5 ROM verwendest</string>
@@ -172,13 +218,14 @@
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Textfarbe</string> 
     <string name="updating">Aktualisiere\u2026</string>
+    <string name="upgrade">Upgrade</string> 
     <string name="visibility_units">Längeneinheit</string>
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mi"</string>
+    <string name="weather_cond_chancerain">Regenwahrscheinlichkeit</string>
     <string name="weather_cond_cloudy">Wolkig</string>
     <string name="weather_cond_fog">Nebel</string>
-    <string name="weather_cond_chancerain">Regenwahrscheinlichkeit</string>
     <string name="weather_cond_lightsnow">Leichter Schneefall</string>
     <string name="weather_cond_overcast">Bedeckt</string>
     <string name="weather_cond_rain">Regen</string>
@@ -224,5 +271,5 @@
     <string name="wind_variable">Wechselnd</string>  
     <string name="wind_w">W</string>
     <string name="wind_wnw">W-NW</string>
-    <string name="wind_wsw">W-SW</string>  
+    <string name="wind_wsw">W-SW</string>
 </resources>
