--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -7,10 +7,10 @@
     <string name="about_dust">Smog</string>
     <string name="about_fog">Nebel</string>
     <string name="about_for_translators">Für Übersetzer:</string>
-    <string name="about_for_translators_text">Wenn Du helfen willst die App in Deine Sprache zu übersetzen, gehe einfach auf meine GitHub-Seite (verwende den Button oben) um alle Quellen zu sehen.</string>              
+    <string name="about_for_translators_text">Wenn du helfen willst diese App in deine Sprache zu übersetzen, gehe einfach auf meine GitHub-Seite (verwende den Button oben) um die Quelldateien zu sehen.</string>              
     <string name="about_hailstone">Hagel</string>
     <string name="about_heavy_snow">Schneegestöber</string>    
-    <string name="about_light_rain">Nieseln</string>
+    <string name="about_light_rain">Nieselregen</string>
     <string name="about_light_snow">Leichter Schneefall</string>
     <string name="about_overcast">Bedeckt</string>
     <string name="about_rain">Regen</string>
@@ -30,10 +30,10 @@
     <string name="cancel">Abbrechen</string>
     <string name="changelog">Changelog</string>
     <string name="clear_miui_data">Bereinige MIUI-Wetterdaten</string>
-    <string name="clear_miui_data_dialog">Bereinige MIUI-Wetter</string>
+    <string name="clear_miui_data_dialog">Bereinige MIUI-Wetterdaten</string>
     <string name="clear_miui_data_dialog_ask">MIUI-Wetterprovider-Datenbank bereinigen?</string>
     <string name="clear_miui_data_dialog_text">MIUI-Wetterprovider-Datenbank bereinigt!</string>
-    <string name="clear_miui_data_summary">Bereinigt MIUI-Wetter-Provider-Datenbank</string>
+    <string name="clear_miui_data_summary">Bereinigt die MIUI-Wetterprovider-Datenbank</string>
     <string name="close">Schließen</string>
     <string name="conf_add_widget">Widget hinzufügen</string>
     <string name="conf_choose_skin">Darstellung wählen</string>
@@ -48,7 +48,7 @@
     <string name="dlg_set_as_home">Setze als \"Heimatstadt\"</string>
     <string name="donate">Spenden</string>
     <string name="donations_button_close">Schließen</string> 
-    <string name="donations_description">Findest Du diese App nützlich?\nUnterstütze die Entwicklung durch flattring oder sende Spenden an den Entwickler!</string> 
+    <string name="donations_description">Findest du diese App nützlich?\nUnterstütze die Entwicklung mit \"Flattr\" oder sende Spenden an den Entwickler!</string> 
     <string name="donations_flattr">Flattr</string> 
     <string name="donations_flattr_description">Flattr erhält 10 % monatliche Gebühr!</string> 
     <string name="donations_google_android_market">Google Play Store</string> 
@@ -58,17 +58,17 @@
     <string name="donations_google_android_market_not_supported_title">In-App-Spenden werden nicht unterstützt</string> 
     <string name="donations_google_android_market_text">Wie viel?</string> 
     <string name="donations_paypal">PayPal</string> 
-    <string name="donations_paypal_description">Du kannst entscheiden wieviel Du spenden willst, nachdem Du den Button gedrückt hast!</string> 
+    <string name="donations_paypal_description">Du kannst entscheiden wie viel du spenden willst, nachdem du den Button gedrückt hast!</string> 
     <string name="donations_paypal_item_name">In-App-Spende</string> 
     <string name="donations_thanks_dialog">Danke für die Spende!\nIch weiß das sehr zu schätzen!</string>    
     <string name="donations_thanks_dialog_title">Danke!</string> 
     <string name="donations_yandex">Yandex.Money (RU)</string>  
     <string name="download_video">Video abrufen</string>
     <string name="end_time_title">Ende</string>
-    <string name="fetching_location">Ermittle Deine Position\u2026</string>
+    <string name="fetching_location">Ermittle deine Position\u2026</string>
     <string name="foreca_clear">Klar</string>
     <string name="foreca_cloudy">Wolkig</string>
-    <string name="foreca_cloudy_l_rain">Nieseln</string>
+    <string name="foreca_cloudy_l_rain">Nieselregen</string>
     <string name="foreca_cloudy_l_snow">Leichter Schneefall</string>
     <string name="foreca_cloudy_l_wet_snow">Leichter, nasser Schneefall</string>
     <string name="foreca_cloudy_rain">Regen</string>
@@ -88,7 +88,7 @@
     <string name="foreca_mostly_clear_pos_ts_wet_snow">Gewitter mit nassem Schnee möglich</string>
     <string name="foreca_mostly_clear_pos_wet_snow">Nasser Schnee möglich</string>
     <string name="foreca_overcast">Bedeckt</string>
-    <string name="foreca_overcast_l_rain">Nieseln</string>
+    <string name="foreca_overcast_l_rain">Nieselregen</string>
     <string name="foreca_overcast_l_snow">Leichter Schneefall</string>
     <string name="foreca_overcast_l_wet_snow">Leichter, nasser Schneefall</string>
     <string name="foreca_overcast_rain">Regen</string>
@@ -101,7 +101,7 @@
     <string name="foreca_overcast_wet_snow">Nasser Schnee</string>
     <string name="foreca_overcast_wet_snow_showers">Nasse Schneeschauer</string>
     <string name="foreca_partly_cloudy">Teilweise wolkig</string>
-    <string name="foreca_partly_cloudy_l_rain">Nieseln</string>
+    <string name="foreca_partly_cloudy_l_rain">Nieselregen</string>
     <string name="foreca_partly_cloudy_l_snow">Leichter Schneefall</string>
     <string name="foreca_partly_cloudy_l_wet_snow">Leichter, nasser Schneefall</string>
     <string name="foreca_partly_cloudy_pos_ts_rain">Gewitter mit Regen möglich</string>
@@ -128,8 +128,9 @@
     <string name="network_error">Verbindung mit dem Server fehlgeschlagen</string>
     <string name="new_version">Neue Version</string> 
     <string name="no_provider">Positionierung nicht möglich\nWähle den Ort selbst aus</string>
-    <string name="no_weather_provider">Kein MIUI-Wetteranbieter gefunden</string>    <string name="ok">OK</string>
+    <string name="no_weather_provider">Kein MIUI-Wetterprovider gefunden</string>
     <string name="not_now">Nicht jetzt</string> 
+    <string name="ok">OK</string>
     <string name="press_color_to_apply">Zum Anwenden die Farbe berühren</string> 
     <string name="pressure_units">Druckeinheit</string> 
     <string name="pressure_units_mb">" hPa"</string>
@@ -165,7 +166,7 @@
     <string name="settings_click_actions">Berührungseinstellungen</string>
     <string name="settings_miui_support_summary">Einschalten um native MIUI-Widgets zu unterstützen</string>
     <string name="settings_miui_support_title">MIUI-Widget-Unterstützung</string>
-    <string name="settings_miui_v5_summary">Einschalten wenn Du ein MIUI v5 ROM verwendest</string>
+    <string name="settings_miui_v5_summary">Einschalten wenn du ein MIUI v5 ROM verwendest</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>    
     <string name="settings_notification_color_title">Benachrichtigungssymbolfarbe</string>
     <string name="settings_notification_summary">Zeige aktuelle Wetterbedingungen im Benachrichtigungsbereich</string>
@@ -174,13 +175,13 @@
     <string name="settings_notification_type">Art der Benachrichtigung</string>
     <string name="settings_show_info_summary">Zeige oder verstecke Anzeigeelemente</string>
     <string name="settings_show_info_title">Zeige Information</string>
-    <string name="settings_show_weather_icons_summary">Zeige Wettersymbol (anstelle der Wetterbeschreibung) in der 3-Tage-Vorhersage</string>
+    <string name="settings_show_weather_icons_summary">Zeige Wettersymbole (anstelle der Wetterbeschreibung) in der 3-Tage-Vorhersage</string>
     <string name="settings_show_weather_icons_title">Zeige Wettersymbole</string>
     <string name="settings_time_format_12h">12h Zeitformat</string>
     <string name="settings_update_autoupdate_summary">Automatische Aktualisierung der Vorhersage</string>
     <string name="settings_update_autoupdate_title">Automatische Aktualisierung</string>
     <string name="settings_update_interval_title">Aktualisierungsintervall</string>
-    <string name="settings_update_roaming_summary">Automatische Aktualisierung der Vorhersage auch bei Roaming. Beachte, dass Du stark erhöhte Kosten zu erwarten hast!</string>
+    <string name="settings_update_roaming_summary">Automatische Aktualisierung der Vorhersage auch bei Roaming. Beachte, dass du stark erhöhte Kosten zu erwarten hast!</string>
     <string name="settings_update_roaming_title">Aktualisieren wenn Roaming</string>
     <string name="settings_update_wake_title">Gerät aufwecken</string>
     <string name="settings_update_wifi_only_summary">Automatische Aktualisierung der Vorhersage ausschließlich mit WLAN-Verbindung</string>
