Changing a weather term

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -31,9 +31,9 @@
     <string name="changelog">Changelog</string>
     <string name="clear_miui_data">Bereinige MIUI-Wetterdaten</string>
     <string name="clear_miui_data_dialog">Bereinige MIUI-Wetterdaten</string>
-    <string name="clear_miui_data_dialog_ask">MIUI-Wetterprovider-Datenbank bereinigen?</string>
-    <string name="clear_miui_data_dialog_text">MIUI-Wetterprovider-Datenbank bereinigt!</string>
-    <string name="clear_miui_data_summary">Bereinigt die MIUI-Wetterprovider-Datenbank</string>
+    <string name="clear_miui_data_dialog_ask">MIUI-Wetteranbieter-Datenbank bereinigen?</string>
+    <string name="clear_miui_data_dialog_text">MIUI-Wetteranbieter-Datenbank bereinigt!</string>
+    <string name="clear_miui_data_summary">Bereinigt die MIUI-Wetteranbieter-Datenbank</string>
     <string name="close">Schließen</string>
     <string name="conf_add_widget">Widget hinzufügen</string>
     <string name="conf_choose_skin">Darstellung wählen</string>
@@ -45,7 +45,7 @@
     <string name="dialog_color_picker">Farbwähler</string> 
     <string name="dlg_go_to_forecast">Gehe zur Vorhersage</string>
     <string name="dlg_select_action">Wähle eine Aktion</string>
-    <string name="dlg_set_as_home">Setze als \"Heimatstadt\"</string>
+    <string name="dlg_set_as_home">Als \"Heimatstadt\" setzen</string>
     <string name="donate">Spenden</string>
     <string name="donations_button_close">Schließen</string> 
     <string name="donations_description">Findest du diese App nützlich?\nUnterstütze die Entwicklung mit \"Flattr\" oder sende Spenden an den Entwickler!</string> 
@@ -70,49 +70,49 @@
     <string name="foreca_cloudy">Wolkig</string>
     <string name="foreca_cloudy_l_rain">Nieselregen</string>
     <string name="foreca_cloudy_l_snow">Leichter Schneefall</string>
-    <string name="foreca_cloudy_l_wet_snow">Leichter, nasser Schneefall</string>
+    <string name="foreca_cloudy_l_wet_snow">Leichter Schneeregen</string>
     <string name="foreca_cloudy_rain">Regen</string>
     <string name="foreca_cloudy_showers">Schauer</string>
     <string name="foreca_cloudy_snow">Schnee</string>
     <string name="foreca_cloudy_snow_showers">Schneegestöber</string>
     <string name="foreca_cloudy_ts_rain">Gewitter mit Regen</string>
     <string name="foreca_cloudy_ts_snow">Gewitter mit Schnee</string>
-    <string name="foreca_cloudy_ts_wet_snow">Gewitter mit nassem Schnee</string>
-    <string name="foreca_cloudy_wet_snow">Nasser Schnee</string>
-    <string name="foreca_cloudy_wet_snow_showers">Nasse Schneeschauer</string>
+    <string name="foreca_cloudy_ts_wet_snow">Gewitter mit Schneeregen</string>
+    <string name="foreca_cloudy_wet_snow">Schneeregen</string>
+    <string name="foreca_cloudy_wet_snow_showers">Schneeregenschauer</string>
     <string name="foreca_mostly_clear">Meist Klar</string>
     <string name="foreca_mostly_clear_pos_rain">Regen möglich</string>
     <string name="foreca_mostly_clear_pos_snow">Schnee möglich</string>
     <string name="foreca_mostly_clear_pos_ts_rain">Gewitter mit Regen möglich</string>
     <string name="foreca_mostly_clear_pos_ts_snow">Gewitter mit Schnee möglich</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Gewitter mit nassem Schnee möglich</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Nasser Schnee möglich</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Gewitter mit Schneeregen möglich</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Schneeregen möglich</string>
     <string name="foreca_overcast">Bedeckt</string>
     <string name="foreca_overcast_l_rain">Nieselregen</string>
     <string name="foreca_overcast_l_snow">Leichter Schneefall</string>
-    <string name="foreca_overcast_l_wet_snow">Leichter, nasser Schneefall</string>
+    <string name="foreca_overcast_l_wet_snow">Leichter Schneeregen</string>
     <string name="foreca_overcast_rain">Regen</string>
     <string name="foreca_overcast_showers">Schauer</string>
     <string name="foreca_overcast_snow">Schnee</string>
     <string name="foreca_overcast_snow_showers">Schneegestöber</string>
     <string name="foreca_overcast_ts_rain">Gewitter mit Regen</string>
     <string name="foreca_overcast_ts_snow">Gewitter mit Schnee</string>
-    <string name="foreca_overcast_ts_wet_snow">Gewitter mit nassem Schnee</string>
-    <string name="foreca_overcast_wet_snow">Nasser Schnee</string>
-    <string name="foreca_overcast_wet_snow_showers">Nasse Schneeschauer</string>
+    <string name="foreca_overcast_ts_wet_snow">Gewitter mit Schneeregen</string>
+    <string name="foreca_overcast_wet_snow">Schneeregen</string>
+    <string name="foreca_overcast_wet_snow_showers">Schneeregenschauer</string>
     <string name="foreca_partly_cloudy">Teilweise wolkig</string>
     <string name="foreca_partly_cloudy_l_rain">Nieselregen</string>
     <string name="foreca_partly_cloudy_l_snow">Leichter Schneefall</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Leichter, nasser Schneefall</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Leichter Schneeregen</string>
     <string name="foreca_partly_cloudy_pos_ts_rain">Gewitter mit Regen möglich</string>
     <string name="foreca_partly_cloudy_pos_ts_snow">Gewitter mit Schnee möglich</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Gewitter mit nassem Schnee möglich</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Gewitter mit Schneeregen möglich</string>
     <string name="foreca_partly_cloudy_rain">Regen</string>
     <string name="foreca_partly_cloudy_showers">Schauer</string>
     <string name="foreca_partly_cloudy_snow">Schnee</string>
     <string name="foreca_partly_cloudy_snow_showers">Schneegestöber</string>
-    <string name="foreca_partly_cloudy_wet_snow">Nasser Schnee</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Nasse Schneeschauer</string>
+    <string name="foreca_partly_cloudy_wet_snow">Schneeregen</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Schneeregenschauer</string>
     <string name="just_now">Gerade eben</string>
     <string name="loading">Lade\u2026</string> 
     <string name="location_edit">Name der Stadt</string>
@@ -128,7 +128,7 @@
     <string name="network_error">Verbindung mit dem Server fehlgeschlagen</string>
     <string name="new_version">Neue Version</string> 
     <string name="no_provider">Positionierung nicht möglich\nWähle den Ort selbst aus</string>
-    <string name="no_weather_provider">Kein MIUI-Wetterprovider gefunden</string>
+    <string name="no_weather_provider">Kein MIUI-Wetteranbieter gefunden</string>
     <string name="not_now">Nicht jetzt</string> 
     <string name="ok">OK</string>
     <string name="press_color_to_apply">Zum Anwenden die Farbe berühren</string> 
@@ -181,7 +181,7 @@
     <string name="settings_update_autoupdate_summary">Automatische Aktualisierung der Vorhersage</string>
     <string name="settings_update_autoupdate_title">Automatische Aktualisierung</string>
     <string name="settings_update_interval_title">Aktualisierungsintervall</string>
-    <string name="settings_update_roaming_summary">Automatische Aktualisierung der Vorhersage auch bei Roaming. Beachte, dass du stark erhöhte Kosten zu erwarten hast!</string>
+    <string name="settings_update_roaming_summary">Automatische Aktualisierung der Vorhersage auch bei Roaming. Beachte, dass du stark erhöhte Gebühren zu erwarten hast!</string>
     <string name="settings_update_roaming_title">Aktualisieren wenn Roaming</string>
     <string name="settings_update_wake_title">Gerät aufwecken</string>
     <string name="settings_update_wifi_only_summary">Automatische Aktualisierung der Vorhersage ausschließlich mit WLAN-Verbindung</string>
@@ -224,7 +224,7 @@
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mi"</string>
-    <string name="weather_cond_chancerain">Regenwahrscheinlichkeit</string>
+    <string name="weather_cond_chancerain">Regen möglich</string>
     <string name="weather_cond_cloudy">Wolkig</string>
     <string name="weather_cond_fog">Nebel</string>
     <string name="weather_cond_lightsnow">Leichter Schneefall</string>
