--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="download_video">Get video</string>
     <string name="end_time_title">End</string>
     <string name="fetching_location">Getting your position\u2026</string>
-	<string name="foreca_clear">Clear</string>
+    <string name="foreca_clear">Clear</string>
     <string name="foreca_cloudy">Cloudy</string>
     <string name="foreca_cloudy_l_rain">Light rain</string>
     <string name="foreca_cloudy_l_snow">Light snow</string>
@@ -216,6 +216,11 @@
     <string name="settings_widgets_widget4x2_temp_font_title">Temperature</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Default value 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Wind</string>
+    <string name="share">Share</string>
+    <string name="share_content">\#WeatherBZ#</string>
+    <string name="share_weather_content">"\#WeatherBZ# Today %1$s's weather is %2$s, %3$s, %4$s. Updated %5$s."</string>
+    <string name="share_weather_title">Share weather data</string>
+    <string name="save_screen_shot_failed">Failed to save screenshot</string>
     <string name="start_time_title">Start</string>
     <string name="temperature_units">Temperature units</string>
     <string name="temperature_units_c">Celsius</string>
