--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="new_version">Új verzió</string> 
-    <string name="upgrade">Frissítés</string> 
-    <string name="not_now">Most nem</string> 
-    <string name="loading">Betöltés\u2026</string> 
     <string name="about_author">Szerző:</string>
     <string name="about_blizzard">Hóvihar</string>
     <string name="about_cloudy">Felhős</string>
@@ -68,8 +64,56 @@
     <string name="download_video">Video letöltés</string> 
     <string name="end_time_title">Vége</string>
     <string name="fetching_location">Helymeghatározás\u2026</string>
+    <string name="foreca_clear">Tiszta</string>
+    <string name="foreca_cloudy">Felhős</string>
+    <string name="foreca_cloudy_l_rain">Szemerkélés</string>
+    <string name="foreca_cloudy_l_snow">Hószállingózás</string>
+    <string name="foreca_cloudy_l_wet_snow">Havaseső</string>
+    <string name="foreca_cloudy_rain">Eső</string>
+    <string name="foreca_cloudy_showers">Zivatarok</string>
+    <string name="foreca_cloudy_snow">Hó</string>
+    <string name="foreca_cloudy_snow_showers">Hózáporok</string>
+    <string name="foreca_cloudy_ts_rain">Felhős,helyenként eső</string>
+    <string name="foreca_cloudy_ts_snow">Felhós,helyenként havazás</string>
+    <string name="foreca_cloudy_ts_wet_snow">Felhős,helyenként havaseső</string>
+    <string name="foreca_cloudy_wet_snow">Havaseső</string>
+    <string name="foreca_cloudy_wet_snow_showers">Havaseső,hó</string>
+    <string name="foreca_mostly_clear">Többnyire tiszta</string>
+    <string name="foreca_mostly_clear_pos_rain">Többnyire tiszta,eső lehetséges</string>
+    <string name="foreca_mostly_clear_pos_snow">Többnyire tiszta,hó lehetséges</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Többnyire tiszta,helyenként zivatar</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Többnyire tiszta,helyenként havazás</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Többnyire tiszta,helyenként havaseső</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Többnyire tiszta,helyenként havaseső</string>
+    <string name="foreca_overcast">Borult</string>
+    <string name="foreca_overcast_l_rain">Szemerkélés</string>
+    <string name="foreca_overcast_l_snow">Hószállingózás</string>
+    <string name="foreca_overcast_l_wet_snow">Havaseső eshet</string>
+    <string name="foreca_overcast_rain">Eső</string>
+    <string name="foreca_overcast_showers">Zivatarok</string>
+    <string name="foreca_overcast_snow">Hó</string>
+    <string name="foreca_overcast_snow_showers">Hózáporok</string>
+    <string name="foreca_overcast_ts_rain">Eső lehetséges</string>
+    <string name="foreca_overcast_ts_snow">Havazás lehetséges</string>
+    <string name="foreca_overcast_ts_wet_snow">Havaseső lehetséges</string>
+    <string name="foreca_overcast_wet_snow">Havaseső</string>
+    <string name="foreca_overcast_wet_snow_showers">Havaseső,hó</string>
+    <string name="foreca_partly_cloudy">Részben felhős</string>
+    <string name="foreca_partly_cloudy_l_rain">Könnyű eső</string>
+    <string name="foreca_partly_cloudy_l_snow">Gyenge havazás</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Szitálás</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Helyenként eső</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Helyenként havazás</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Helyenként havaseső</string>
+    <string name="foreca_partly_cloudy_rain">Eső</string>
+    <string name="foreca_partly_cloudy_showers">Záporok</string>
+    <string name="foreca_partly_cloudy_snow">Hó</string>
+    <string name="foreca_partly_cloudy_snow_showers">Részben felhős</string>
+    <string name="foreca_partly_cloudy_wet_snow">Részben felhős</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Részben felhős</string>
     <string name="changelog">Változások</string>
     <string name="just_now">Most</string>
+    <string name="loading">Betöltés\u2026</string> 
     <string name="location_edit">Gépelje be a város nevét</string>
     <string name="location_gps">Jelenlegi helyszín</string>
     <string name="location_list">Helyszínek</string>
@@ -81,7 +125,10 @@
     <string name="menu_trend">Előrejelzés</string>
     <string name="menu_update">Frissítés</string>
     <string name="network_error">Csatlakozás sikertelen</string>
+    <string name="new_version">Új verzió</string> 
     <string name="no_provider">Helymeghatározás sikertelen - a helyszínt válassza ki kézzel</string>
+    <string name="no_weather_provider">No MIUI weather provider found</string>
+    <string name="not_now">Most nem</string> 
     <string name="press_color_to_apply">Alkalmazáshoz nyomja meg a színt</string>
     <string name="pressure_units">Légnyomás mértékegysége</string> 
     <string name="pressure_units_mb">" mb"</string>
@@ -137,8 +184,10 @@
     <string name="settings_update_wake_title">Eszköz felébresztése</string>
     <string name="settings_update_wifi_only_summary">Az időjárás automatikus frissítése Wi-Fi kapcsolat esetén</string> 
     <string name="settings_update_wifi_only_title">Frissítés csak Wi-Fi-ről</string>
+    <string name="settings_weather_provider">Időjárás szolgáltató</string>
     <string name="settings_widgets_click_clock_summary">Alkalmazás beállítások indítása</string>
     <string name="settings_widgets_click_clock_title">Óra érintésekor</string>
+    <string name="settings_widgets_click_date_summary">Alkalmazás indítása a dátum érintésekor</string>
     <string name="settings_widgets_click_date_title">Dátum érintésekor</string>
     <string name="settings_widgets_click_weather_summary">Alkalmazás indítása az időjárás érintésekor (hőmérséklet)</string>
     <string name="settings_widgets_click_weather_title">Időjárás érintésekor</string>
@@ -161,12 +210,18 @@
     <string name="settings_widgets_widget4x2_temp_font_title">Hőmérséklet</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Alapértelmezett érték 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Szélsebesség</string>
+    <string name="share">Megosztás</string>
+    <string name="share_content">\#WeatherBZ#</string>
+    <string name="share_weather_content">"\#WeatherBZ# Ma %1$s időjárása : %2$s, %3$s, %4$s. Frissítve %5$s."</string>
+    <string name="share_weather_title">Időjárás adatok megosztása</string>
+    <string name="save_screen_shot_failed">Képernyőkép mentése nem sikerült</string>
     <string name="start_time_title">Kezdete</string>
     <string name="temperature_units">Hőmérséklet mértékegysége</string>
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>     
     <string name="text_color_title">Szöveg szín</string>
     <string name="updating">Frissítés...</string>
+    <string name="upgrade">Frissítés</string>
     <string name="visibility_units">Látótávolság mértékegysége</string>
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" mérföld"</string>
@@ -191,8 +246,10 @@
     <string name="weather_visibility">"Látótávolság: "</string>
     <string name="weather_wind">"Szél: "</string>
     <string name="widget_name_large">Időjárás 4x2</string>
+    <string name="widget_name_large_v5">Időjárás Miui V5 (4x2)</string>
     <string name="widget_name_medium">Időjárás 4x1</string>
     <string name="widget_name_medium_ext">Időjárás 4x1</string>
+    <string name="widget_name_medium_v5">Időjárás Miui V5 (4x1)</string>
     <string name="widget_text_color_summary">Widgetek szöveg színe</string>
     <string name="wind_e">K</string>
     <string name="wind_ene">K-ÉK</string>
@@ -211,6 +268,7 @@
     <string name="wind_sse">D-DK</string>
     <string name="wind_ssw">D-DNY</string>
     <string name="wind_sw">DNY</string>
+    <string name="wind_variable">Változó</string>
     <string name="wind_w">NY</string>
     <string name="wind_wnw">NY-DNY</string>
     <string name="wind_wsw">NY-DNY</string>
